Another possible fix to background not sizing on mobile

--- a/public/about.css
+++ b/public/about.css
@@ -29,7 +29,10 @@ body {
 .about {
 	font-family: 'Montserrat', sans-serif;
 	background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
-	background-size: 100%;
+	-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 	position: relative;
 	width: 100%;
 	height: 100%;
